# gen-sbi

./: .buildinfo  .gitignore  README.md  blog.html  examples.html  genindex.html  getting_started.html  index.html  objects.inv  py-modindex.html  pyproject.toml  references.html  search.html  searchindex.js  test.ipynb  test.py  test_divergence.ipynb  test_plotting.ipynb
.github/workflows/: CI.yaml  CI.yaml.bk  docs.yaml  python-app.yml
_modules/: gensbi.html  index.html
_modules/gensbi/: diffusion.html  flow_matching.html
_modules/gensbi/utils/: math.html  model_wrapping.html  plotting.html
_sources/: references.md.txt
_sources/api/: index.rst.txt
_sources/api/gensbi/: index.rst.txt
_sources/notebooks/: diffusion_2d_unconditional.ipynb.txt
api/: index.html
api/gensbi/: index.html
api/gensbi/diffusion/: index.html
api/gensbi/flow_matching/: index.html
api/gensbi/models/: index.html
api/gensbi/utils/: index.html
blog/: drafts.html
docs/: Makefile  conf.py  conf.py.bk  deploy.py  examples.md  getting_started.md  index.md  index.rst  references.md  requirements.txt
docs/_static/notebooks/: flow_matching_2d_unconditional.ipynb
docs/source/: gensbi.diffusion.path.rst  gensbi.diffusion.path.scheduler.rst  gensbi.diffusion.rst  gensbi.diffusion.solver.rst  gensbi.flow_matching.loss.rst  gensbi.flow_matching.path.rst  gensbi.flow_matching.path.scheduler.rst  gensbi.flow_matching.rst  gensbi.flow_matching.solver.rst  gensbi.flow_matching.utils.manifolds_not_implemented.rst  gensbi.flow_matching.utils.rst  gensbi.models.flux1.rst  gensbi.models.rst  gensbi.models.simformer.rst  gensbi.rst  gensbi.utils.rst  modules.rst
examples/: diffusion_2d.ipynb  diffusion_2d_unconditional.ipynb  flow_matching_2d.ipynb  flow_matching_2d_test.ipynb  flow_matching_2d_unconditional.ipynb  sbi_example.ipynb
examples/sbi-benchmark/: two_moons.ipynb
examples/sbi-benchmarks/: two_moons.ipynb  two_moons_jflux.ipynb  two_moons_jflux_v2.ipynb  two_moons_jflux_v3.ipynb  two_moons_sde.ipynb
examples/sbi-benchmarks/two_moons/: two_moons.ipynb  two_moons_jflux.ipynb  two_moons_jflux_tests.ipynb  two_moons_simformer.ipynb  two_moons_simformer_diffusion.ipynb  two_moons_v2.ipynb
examples/sbi-benchmarks/utils/: dataloader.py  sbi_tasks.py  simformer.py
lite/: jupyter-lite.json
notebooks/: diffusion_2d_unconditional.html  diffusion_2d_unconditional.ipynb  flow_matching_2d_unconditional.html  flow_matching_2d_unconditional.ipynb
old/: flow_matching_2d_discrete.ipynb  flow_matching_2d_test.ipynb
scripts/: make_datasets_sbibm.py
src/cfm-jax_bk/: conditional_flow_matching.py  optimal_transport.py
src/diffusion/: __init__.py  embedding.py  sde.py
src/diffusion/edm/: samplers.py
src/diffusion/path/: __init__.py  edm_path.py  path.py  path_sample.py
src/diffusion/sbi/: transformer.py
src/diffusion/solver/: __init__.py  edm_samplers.py  sde_solver.py  solver.py
src/flow_matching/loss/: __init__.py  continuous_loss.py
src/flow_matching/path/: __init__.py  geodesic.py.ni  mixture.py  mixture.py.ni  mixture.py.not_implemented  path_sample.py
src/flow_matching/solver/: __init__.py  discrete_solver.py  discrete_solver.py.not_implemented  ode_solver.py  riemannian_ode_solver.py.ni  sde_solver.py  sde_solver.py.bk  sde_solver.py.bk2  solver.py  utils.py
src/flow_matching/utils/: __init__.py  categorical_sampler.py  model_wrapper.py  model_wrapper.py.bk  utils.py
src/gensbi/: __init__.py
src/gensbi/diffusion/: __init__.py
src/gensbi/flow_matching/: __init__.py
src/gensbi/models/: __init__.py
src/gensbi/utils/: math.py  model_wrapping.py  plotting.py
src/models/: __init__.py
src/models/flux1/: __init__.py  layers.py  loss.py  math.py  model.py  model.py.bk
src/models/flux1_bk/: layers.py  loss.py  model.py
src/models/simformer/: __init__.py  loss.py  simformer.py  transformer.py
src/models/simformer_v2/: __init__.py  loss.py  simformer.py  transformer.py
src/sbi_utils/: __init__.py  simformer.py  transformer.py
src/sbi_utils/flux1_model/: layers.py  model.py
src/utils/: model_wrapping.py  plotting.py
sub/: interactive.sub  start_interactive.sh  tunnel.sub
sub/condor_logs/: outfile.out
test/diffusion/path/: test_edm_path.py  test_path.py  test_path_sample.py
test/diffusion/solver/: test_edm_samplers.py  test_sde_solver.py  test_solver.py
test/flow_matching/loss/: test_continuous_loss.py
test/models/flux1/: test_layers.py  (+3 more)
test/utils/: test_math.py  test_model_wrapping.py  test_plotting.py  test_plotting_functions.py
(+218 files in other folders)
