[project]
name = "GenSBI"
version = "0.0.1"
description = "A JAX implementation of CFM and Diffusion models for generative modeling and SBI."
authors = [{ name = "Aurelio Amerio", email = "aure.amerio@gmail.com" }]
license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    "jax>=0.6.0",
    "matplotlib>=3.10",
    "numpy>=2.1",
    "flax>=0.6.0",
    "diffrax>=0.6.0",
    "numpyro>=0.16.0",
    "tqdm>=4.62.0",
    "corner>=2.2.3",
    "seaborn>=0.13.2",
    "orbax-checkpoint>=0.11.15",
    "einops>=0.8.1",
    "grain"
]

[project.urls]
Homepage = "https://github.com/aurelio-amerio/GenSBI"
Issues = "https://github.com/aurelio-amerio/GenSBI/issues"

[project.optional-dependencies]
cuda12 = ["jax[cuda12]"]
tpu = ["jax[tpu]"]

docs = ["pydata-sphinx-theme", "sphinx", "myst-parser"]

test = [
    "pytest",
    "pytest-xdist",
    "pytest-cov",
    "pytest-mock",
    "pytest-env",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
sources = ["src"]

[tool.hatch.build.targets.wheel]
force-include = { "src/gensbi" = "gensbi" }

[tool.hatch.metadata]
allow-direct-references = true

[tool.pytest.ini_options]
env = [
    "JAX_PLATFORMS=cpu"
]
